// Employee Management System Database Schema
// DBML (Database Markup Language) format
// Can be used with dbdiagram.io to generate visual ER diagrams

Table users {
  user_id integer [primary key]
  username varchar(50) [unique, not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  role user_role [not null, default: 'EMPLOYEE']
  is_active boolean [not null, default: true]
  last_login timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table employees {
  employee_id integer [primary key]
  user_id integer [ref: > users.user_id]
  employee_number varchar(20) [unique, not null]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  date_of_birth date
  gender gender_type
  personal_email varchar(100)
  phone varchar(20)
  address text
  department_id integer [ref: > departments.department_id]
  position_id integer [ref: > positions.position_id]
  manager_id integer [ref: > employees.employee_id]
  salary decimal(10,2) [not null, note: 'CHECK (salary >= 0)']
  hire_date date [not null]
  termination_date date [note: 'CHECK (termination_date IS NULL OR termination_date >= hire_date)']
  employment_status employment_status_type [not null, default: 'ACTIVE']
  emergency_contact_name varchar(100)
  emergency_contact_phone varchar(20)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table departments {
  department_id integer [primary key]
  department_name varchar(100) [not null]
  department_code varchar(10) [unique, not null]
  description text
  parent_department_id integer [ref: > departments.department_id]
  manager_id integer [ref: > employees.employee_id]
  budget decimal(15,2) [default: 0]
  location varchar(255)
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table positions {
  position_id integer [primary key]
  position_title varchar(100) [not null]
  position_code varchar(20) [unique, not null]
  department_id integer [ref: > departments.department_id]
  job_description text
  min_salary decimal(12,2)
  max_salary decimal(12,2)
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table attendance_records {
  attendance_id integer [primary key]
  employee_id integer [ref: > employees.employee_id]
  attendance_date date [not null]
  check_in_time time
  check_out_time time
  total_hours decimal(4,2)
  overtime_hours decimal(4,2) [default: 0]
  status attendance_status_type [not null, default: 'PRESENT']
  notes text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table time_off_requests {
  request_id integer [primary key]
  employee_id integer [ref: > employees.employee_id]
  request_type timeoff_type [not null]
  start_date date [not null]
  end_date date [not null]
  total_days integer [not null]
  reason text
  status request_status_type [not null, default: 'PENDING']
  approved_by integer [ref: > employees.employee_id]
  approved_date timestamp
  comments text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table performance_reviews {
  review_id integer [primary key]
  employee_id integer [ref: > employees.employee_id]
  reviewer_id integer [ref: > employees.employee_id]
  review_period_start date [not null]
  review_period_end date [not null]
  overall_rating integer [note: 'CHECK (overall_rating BETWEEN 1 AND 5)']
  goals_achievement text
  strengths text
  areas_for_improvement text
  manager_comments text
  employee_comments text
  development_plan text
  next_review_date date
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table salary_history {
  salary_history_id integer [primary key]
  employee_id integer [ref: > employees.employee_id]
  previous_salary decimal(10,2)
  new_salary decimal(10,2) [not null, note: 'CHECK (new_salary >= 0)']
  change_type salary_change_type [not null]
  change_reason text
  effective_date date [not null]
  approved_by integer [ref: > employees.employee_id]
  created_at timestamp [not null, default: `now()`]
}

Table benefits {
  benefit_id integer [primary key]
  benefit_name varchar(100) [not null]
  benefit_type benefit_type [not null]
  description text
  provider varchar(100)
  cost decimal(10,2) [default: 0]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table employee_benefits {
  employee_benefit_id integer [primary key]
  employee_id integer [ref: > employees.employee_id]
  benefit_id integer [ref: > benefits.benefit_id]
  enrollment_date date [not null]
  coverage_start_date date [not null]
  coverage_end_date date
  employee_contribution decimal(8,2) [default: 0]
  employer_contribution decimal(8,2) [default: 0]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table training_records {
  training_id integer [primary key]
  employee_id integer [ref: > employees.employee_id]
  training_name varchar(200) [not null]
  training_provider varchar(100)
  training_date date
  completion_date date
  training_hours decimal(5,2)
  certification_earned varchar(200)
  cost decimal(8,2) [default: 0]
  status training_status_type [not null, default: 'SCHEDULED']
  notes text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// Enum definitions
Enum user_role {
  HR_ADMIN
  MANAGER
  EMPLOYEE
}

Enum gender_type {
  MALE
  FEMALE
  OTHER
}

Enum employment_status_type {
  ACTIVE
  INACTIVE
  TERMINATED
  ON_LEAVE
}

Enum attendance_status_type {
  PRESENT
  ABSENT
  LATE
  HALF_DAY
  WORK_FROM_HOME
}

Enum timeoff_type {
  VACATION
  SICK_LEAVE
  PERSONAL
  MATERNITY
  PATERNITY
  BEREAVEMENT
  OTHER
}

Enum request_status_type {
  PENDING
  APPROVED
  REJECTED
  CANCELLED
}

Enum benefit_type {
  HEALTH
  DENTAL
  VISION
  RETIREMENT
  LIFE_INSURANCE
  DISABILITY
  OTHER
}

Enum training_status_type {
  SCHEDULED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Enum salary_change_type {
  RAISE
  BONUS
  ADJUSTMENT
  PROMOTION
  DEMOTION
}